# AZB_Raumschiff

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: fdir.rs  gnc.rs  lib.rs  main.rs  physics.rs  simulation.rs  telemetry.rs
